--- a/test/main.html
+++ b/test/main.html
@@ -7,8 +7,13 @@
 <div id="base">
     <ui-base></ui-base>
 </div>
-<div id="attr"><ui-attr attr="你好"></ui-attr></div>
-<div id="nest"><ui-outer test-attr="nest你好"></ui-outer></div>
+<div id="attr">
+    <ui-attr attr="你好">
+    </ui-attr>
+</div>
+<div id="nest">
+    <ui-outer test-attr="nest你好"></ui-outer>
+</div>
 <script type="text/javascript" src="../dist/test/main.js"></script>
 </body>
 </html>
