--- a/test/main.html
+++ b/test/main.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title></title>
+    <style type="text/css">
+    body>div {
+        display: none;
+    }
+    </style>
 </head>
 <body>
 <div id="base">
@@ -13,6 +18,12 @@
 </div>
 <div id="nest">
     <ui-outer test-attr="nest你好"></ui-outer>
+</div>
+<div id="children">
+    <!-- var: name="yibuyisheng" -->
+    <ui-children title="${name}">
+        <div>some contents in `children`. ${name}</div>
+    </ui-children>
 </div>
 <script type="text/javascript" src="../dist/test/main.js"></script>
 </body>
