--- a/test/main.html
+++ b/test/main.html
@@ -9,9 +9,7 @@
     </style>
 </head>
 <body>
-<div id="base">
-    <ui-base></ui-base>
-</div>
+<div id="base"><ui-base test-prop="test the prop" test-expr-prop="${name}"></ui-base></div>
 <div id="attr">
     <ui-attr attr="你好">
     </ui-attr>
