--- a/test/main.html
+++ b/test/main.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body>
-<div id="base"><ui-base test-prop="test the prop" test-expr-prop="${name}"></ui-base></div>
+<div id="base"><ui-base test-prop="test the prop" test-expr-prop="${name}"></ui-base><ui-base test-prop="test the prop" test-expr-prop="${name}"></ui-base></div>
 <div id="attr">
     <ui-attr attr="你好">
     </ui-attr>
@@ -25,6 +25,10 @@
 </div>
 <div id="dirtyChecker">
     <ui-dirty-checker></ui-dirty-checker>
+</div>
+<div id="class">
+    <ui-css-class class="haha"></ui-css-class>
+    <ui-css-class class="heihei"></ui-css-class>
 </div>
 <script type="text/javascript" src="../node_modules/esl/src/esl.js"></script>
 <script type="text/javascript">
