--- a/test/main.html
+++ b/test/main.html
@@ -32,6 +32,14 @@
             {
                 "name": "jasmine",
                 "location": "../node_modules/jasmine-core/lib/jasmine-core"
+            },
+            {
+                "name": "event",
+                "location": "../node_modules/event/src"
+            },
+            {
+                "name": "ProtectObject",
+                "location": "../node_modules/ProtectObject/src"
             }
         ]
     });
