--- a/test/main.html
+++ b/test/main.html
@@ -38,8 +38,12 @@
                 "location": "../node_modules/event/src"
             },
             {
-                "name": "ProtectObject",
+                "name": "protectobject",
                 "location": "../node_modules/ProtectObject/src"
+            },
+            {
+                "name": "state",
+                "location": "../node_modules/state/src"
             }
         ]
     });
